objects/BMCServiceDesk__SYSQVQueryAccess__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__FKQuery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipLabel>SYSQVQueryAccess</relationshipLabel>
        <relationshipName>SYSQVQueryAccess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__profiles__c</fullName>
        <label>Profiles</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>